-fix dark mode in mobile;

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -13,6 +13,16 @@
 body.dark {
   #root {
     background-color: @dark-bg-light-black;
+
+    > #page-container {
+      > .content-wrapper {
+        > .mobile-header-container {
+          > .username-text {
+            color: @dark-text-white;
+          }
+        }
+      }
+    }
   }
 }
 
