--- a/src/less/memo.less
+++ b/src/less/memo.less
@@ -92,7 +92,7 @@
         font-size: 13px;
         cursor: pointer;
         padding: 2px 6px;
-        line-height: 20px;
+        line-height: 24px;
         border-radius: 4px;
         user-select: none;
 
