--- a/src/less/siderbar.less
+++ b/src/less/siderbar.less
@@ -50,6 +50,14 @@
   }
 }
 
+body.dark {
+  .sidebar-wrapper {
+    > * {
+      background-color: @dark-bg-light-black;
+    }
+  }
+}
+
 @media only screen and (max-width: 650px) {
   #page-container.show-user-banner-dialog {
     > .sidebar-wrapper {
